terraform/rds.tf
#########################################
# RDS Subnet Group
#########################################

resource "aws_db_subnet_group" "payroll_db_subnet_group" {
  name = "${var.project_name}-db-subnet-group"

  subnet_ids = [
    aws_subnet.private_1.id,
    aws_subnet.private_2.id
  ]

  tags = merge(local.common_tags, {
    Name = "Payroll DB Subnet Group"
  })
}

#########################################
# PostgreSQL Database
#########################################

resource "aws_db_instance" "payroll_db" {

  identifier = "oceans-payroll-db"

  engine         = "postgres"
  engine_version = "16"

  instance_class = "db.t3.micro"

  allocated_storage = 20
  storage_type      = "gp2"

  db_name  = "payroll"
  username = "payrolladmin"
  password = "ChangeMe123!"

  publicly_accessible = false

  multi_az = false

  storage_encrypted = true

  db_subnet_group_name = aws_db_subnet_group.payroll_db_subnet_group.name

  vpc_security_group_ids = [
    aws_security_group.rds_sg.id
  ]

  skip_final_snapshot = true

  tags = merge(local.common_tags, {
    Name = "Payroll Database"
  })
}
